We need to remove the tree from the transaction. Fixes #3159.

* The tree does keep a reference to the inode as well as long as it is part
  of a transaction.
* Even if it wouldn't have done it (and would not have triggered the panic),
  Haiku would likely have crashed, as the inode (and therefore its tree) was
  already deleted at the time when the transaction discarded its listeners.